# AI-Ocean-Water-Pollution-Predictor

./: .dockerignore  .gitignore  README.md  allplot.py  api.py  api_predictor.py  complete_training_pipeline.py  config.yaml  create_professional_plots.py  deploy_model.py  docker-compose.yml  download_simple.py  environment.yml  final_predict.py  final_real_predictor.py  final_train.py  fix_all_problems.py  predict.py  process_data.py  prometheus.yml  pyproject.toml  real_data_predictor.py  requirements.txt  run_pipeline.py  run_project.py  run_quick.py  run_with_timeseries  settings.yaml  setup.py  simple_train.py  test_model.py  test_netcdf.py  test_real_data.py  time_series_predictor.py  train_final.py  train_model.py  train_now.py  train_real_data.py
.github/workflows/: ci.yml  deploy.yml
api/: api.py  main.py (Streamlit App)  requirements.txt
config/: constants.py  datasets.yaml  training_config.yaml
dashboard/: dashboard.py  requirements.txt
data/: requirements.txt  sample_water_data.csv
scripts/: download_data.py  train.py  train_marine.py  train_model.py
src/: data_processor.py  make_dataset.py  model_trainer.py  train_classification.py  visualizer.py
src/analysis/: uncertainty_analyzer.py
src/config/: constants.py
src/data/: cmems_processor.py  downloader.py  google_drive_loader.py  loader.py  preprocessor.py  simple_preprocessor.py
src/models/: __init__.py  oil_spill_tracker.py  trainer.py
src/utils/: config.py  config_loader.py  logger.py  parallel.py
src/visualization/: data_processor.py  model_trainer.py  plotter.py  predictor.py
tests/: test_predictor.py
web/: app.py
web/templates/: index.html
